--- a/single-page-app-react/package.json
+++ b/single-page-app-react/package.json
@@ -8,9 +8,11 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "server": "json-server -p 3001 db.json"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -26,6 +28,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "jsdom": "^26.0.0",
+    "json-server": "^1.0.0-beta.3",
     "vite": "^6.2.0",
     "vitest": "^3.0.9"
   }
